Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6668794/badSource/Test.out
Test.java:10:6: compiler.err.cant.access: p.A, (compiler.misc.bad.source.file.header: A.java, (compiler.misc.file.doesnt.contain.class: p.A))
1 error
