Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6668794/badSource/Test.java
/*
 * @test /nodynamiccopyright/
 * @bug 6668794 6668796
 * @summary javac puts localized text in raw diagnostics
 *      bad diagnostic "bad class file" given for source files
 * @compile/fail/ref=Test.out -XDrawDiagnostics Test.java
 */

class Test {
    p.A a;
}
